001-pod.yaml
# apiVersion:
# kind: 
# metadata:
# spec: 

apiVersion: v1
kind: Pod
metadata:
    name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80 

---

apiVersion: v1
kind: Pod
metadata:
    name: httpd-pod
spec:
  containers:
  - name: httpd
    image: httpd
    ports:
    - containerPort: 80
