003-env.yaml
apiVersion: v1
kind: Pod
metadata:
    name: httpd-pod
spec:
  containers:
  - name: httpd
    image: httpd
    ports:
    - containerPort: 80
