004-configMap.yaml

apiVersion: v1
kind: Pod
metadata:
    name: https-pod
spec:
  containers:
  - name: httpd
    image: httpd
---

apiVersion: v1
kind: Pod
metadata:
    name: nginx-pod
spec:
  containers:
  - name: httpd
    image: nginx
