005-secret.yaml

apiVersion: v1
kind: Pod
metadata:
    name: secret-pod
spec:
  containers:
  - name: secret
    image: httpd
