01-pod.yaml
# apiVersion:
# kind: 
# metadata:
# spec:

apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
