02-multiPod.yaml
# Multi Container Pod 
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod 
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
  - name: busybox-container
    image: centos:7
    command: ["sleep", "10000"]
