03-env.yaml
# Multi Container Pod 
apiVersion: v1
kind: Pod
metadata:
  name: pod-3 
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
---

apiVersion: v1
kind: Pod
metadata:
  name: pod-4 
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
